@@ -18,6 +18,7 @@
                 "KisMAC.ImportImageForMap"      = "importImageForMap:";
                 "KisMAC.ImportPCAP"             = "importPCAP:";
                 "NSCoreSuite.Save"              = "save:";
+                "KisMAC.saveAs"                 = "saveAs:";
                 "KisMAC.SelectNetworkAtIndex"   = "selectNetworkAtIndex:";
                 "KisMAC.SelectNetworkWithBSSID" = "selectNetworkWithBSSID:";
                 "KisMAC.NetworkCount"           = "networkCount:";
@@ -41,6 +42,11 @@
         };
     };
     Commands = {
+        saveAs = {
+            AppleEventCode = KsaA;
+            CommandClass = NSScriptCommand; 
+            UnnamedArgument = { Optional = NO; Type = "NSString<FilePath>"; };
+        }; 
         showNetworks = {
             AppleEventCode = KshN;
             CommandClass = NSScriptCommand; 
