@@ -1,3 +1,7 @@
+R79:
+
+Fixed "Save Filtered Nets" bug with modified patches by themacuser.  
+
 R67:
 
 Deauth All Networks
